# psych-mas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  backend_service.py  development_log.md  docker-compose.yml  graph.py  install_r_packages.R  langgraph.json  main.py  mmls.py  openrouter_models.py  packages.txt  pyproject.toml  r_packages.txt  requirements.txt  test.py  test_openrouter.py  ui copy.py  ui.py  ui_bak.py
.langgraph_api/: .langgraph_ops.pckl
.streamlit/: config.toml
Funding/: cost.xlsx
R_Secmin/: .RData  .Rhistory  README.md  RT.R  Resp.R  Test.R  datapre_perfits.R  dv.R  example_dataset.R  prepftr.R  sprvs.R  unsprvs.R
backups/: ui_pre_async_irt.py
data/: resp.csv  rt.csv
docs/: FORENSIC_AGENTS_DATA_FLOW.md
scripts/: run_ui_railway.sh
simulation/: sim.R
