[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psych-mas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langgraph-cli[inmem]>=0.4.12",
    "rpy2<3.6; platform_system != 'Windows'",
    "pandas",
    "numpy",
    "networkx",
    "plotly",
    "pyvis",
    "streamlit>=1.35.0",
    "matplotlib",
    "python-dotenv",
    "requests",
    "reportlab>=4.0.0",
    "fastapi",
    "uvicorn[standard]",
    "redis>=5.0.0",
]

[tool.setuptools]
py-modules = ["graph", "ui", "mmls"]

[tool.setuptools.packages.find]
exclude = ["data", "R_Secmin"]
